<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_card"
    android:orientation="vertical"
    android:padding="20dp">


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_task_name"
        android:textColor="@color/white"
        android:textColorHint="#676767" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/indicator_blue"
            android:checked="true"
            android:text="@string/business"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/indicator_green"
            android:text="@string/personal"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonTint="@color/yellow_500"
            android:text="@string/other"
            android:textColor="@color/white" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_gradient_background"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>